Протестовано та виправлено деяке API, переписано логічні помилки. Як тестовий інструмент було використано MusicModule, який до речі тепер теж працює.